--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 @import url('./reset.css');
 @import url('./header.css');
 @import url('./main.css');
+@import url('./table.css');
 @import url('./footer.css');
 
 body {
@@ -8,4 +9,8 @@ body {
     background-color: #FFF;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
+}
+
+a {
+    text-decoration: none;
 }
