affichage des categories
affichage des categories

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,4 +3,9 @@ main {
     background-color: #DDD;
     width: 80%;
     margin: 0 auto;
+    background-image: url("");
+}
+
+ul .article {
+    color: aqua;
 }
